--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.yyfcode</groupId>
     <artifactId>fastexcel</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <version>1.0.2-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>FastExcel</name>
     <description>FastExcel</description>
     <url>https://github.com/yyfcode/fastexcel</url>
